# kora

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Makefile  README.md  SECURITY.md  VULNERABILITY_REPORT.md  actions.json  docker-compose.yml  doppler.yaml  git clone <your-forked-respository-url>  justfile  kora.toml  openapi.json  rustfmt.toml  signers.example.toml  tk_openapi.json
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  main.rs
crates/cli/tests/: integration_tests.rs
crates/kora-deploy/: Cargo.toml  README.md
crates/kora-deploy/src/: main.rs
crates/lib/: Cargo.toml  build.rs  kora.toml
crates/lib/actions/: lib.rs  transfer.rs
crates/lib/src/: account.rs  args.rs  cache.rs  config.rs  constant.rs  error.rs  feature.rs  generated_config.rs  interface.rs  jup.rs  log.rs  mod.rs  oracle.rs  rpc.rs  sanitize.rs  solana.rs  state.rs  token.rs  token_interface.rs  transaction.rs  types.rs  validation.rs
crates/lib/src/admin/: token_util.rs
crates/lib/src/bundle/: error.rs  helper.rs  mod.rs
crates/lib/src/fee/: fee.rs  price.rs
crates/lib/src/jito/: client.rs  mod.rs  tip.rs  types.rs
crates/lib/src/lighthouse/: assertion.rs
crates/lib/src/metrics/: README.md  balance.rs  docker-compose.metrics.yml  handler.rs  middleware.rs  mod.rs
crates/lib/src/oracle/: fake.rs  jupiter.rs  mod.rs  oracle.rs  pyth.rs  tests.rs  types.rs  utils.rs
crates/lib/src/plugin/: gas_swap.rs  mod.rs  plugin_deploy_authority.rs  plugin_gas_swap.rs
crates/lib/src/privacy/: config.rs  cpi_validator.rs  instruction_context.rs  mod.rs
crates/lib/src/rpc_server/: args.rs  auth.rs  middleware_utils.rs  mod.rs  rate_limit.rs  recaptcha.rs  recaptcha_util.rs  rpc.rs  server.rs
crates/lib/src/signer/: bundle_signer.rs  config.rs  config_trait.rs  init.rs  keypair_util.rs  mod.rs  pool.rs  signer.rs  solana_signer.rs  utils.rs  vault_signer.rs
crates/lib/src/swap/: mod.rs  processor.rs  provider.rs
crates/lib/src/tests/: account_mock.rs  cache_mock.rs  config_mock.rs  mod.rs  oracle_mock.rs  redis_cache_mock.rs  rpc_mock.rs  token_tests.rs  toml_mock.rs  transaction_mock.rs  transaction_tests.rs
crates/lib/src/token/: base.rs  implementation.rs  interface.rs  mint.rs  mock.rs  mod.rs  program.rs  spl_token.rs  spl_token_2022.rs  spl_token_2022_util.rs  state.rs  tests.rs  token.rs  token22.rs  token_keg.rs  tokenkeg.rs  trait.rs  types.rs
crates/lib/tests/: token_tests.rs  transaction_tests.rs
crates/metrics/: Cargo.toml  README.md  docker-compose.metrics.yml  prometheus.yml
crates/metrics/src/: handler.rs  middleware.rs  mod.rs
crates/privy/: Cargo.toml
crates/privy-rs/: Cargo.toml
crates/privy-rs/src/: mod.rs  types.rs  utils.rs
crates/privy/src/: mod.rs  types.rs
crates/rpc/: Cargo.toml  actions.json  lib.rs
crates/rpc/new  /: actions.json
crates/rpc/routes/: transfer.rs
crates/rpc/src/: args.rs  auth.rs  lib.rs  main.rs  routes.rs  rpc.rs  server.rs
crates/rpc/src /: program.rs
crates/rpc/tests/: transfer_test.rs
crates/turnkey/: Cargo.toml
crates/turnkey/src/: mod.rs
examples/devnet-deploy-paymaster/: Cargo.toml  Dockerfile  Dockerfile.reaper  README.md  cloudbuild.reaper.yaml  kora.toml  signers.toml  smoke-test.sh
examples/devnet-deploy-paymaster/dashboard/: .gitignore  databricks.yml  ingest.py  kora_devnet.example.lvdash.json  prod.example.yml
examples/devnet-deploy-paymaster/src/: deploy.rs  lib.rs  main.rs
scripts/: Cargo.toml  kora.toml  presigned.rs  token.rs
tests/: Cargo.toml  api_integration_tests.rs  auth_integration_tests.rs  compute_budget_integration_tests.rs  config.toml  integration_tests.rs  kora-test.toml  rpc_integration_tests.rs  setup-test-env.rs  test_transfer.rs  token_integration_tests.rs  transfer.rs  transfer_action_tests.rs
tests/adversarial/: fee_payer_exploitation.rs  main.rs  token_states.rs
tests/auth/: auth_integration_tests.rs  main.rs
tests/blink_demo/: README.md  transfer_transaction.js
tests/examples/: estimateTransactionFee.json  getBlockhash.json  getConfig.json  getEnabledFeatures.json  getSupportedTokens.json  signAndSendTransaction.json  signTransaction.json  transactionTransfer.json  transferAction.json  transferTransactionV2.json
tests/fee_payer_policy/: fee_payer_policy_violations.rs
tests/fixtures/: auth-test.toml
tests/free_signing/: free_signing_tests.rs
tests/gas_swap_plugin/: gas_swap_plugin_tests.rs  main.rs
tests/integration/: compute_budget_integration_tests.rs  main.rs  rpc_integration_tests.rs  token_integration_tests.rs
tests/integrations/oracle/: jupiter_tests.rs  mod.rs
tests/lighthouse/: lighthouse_tests.rs  main.rs
tests/loader_v3_deploy/: deploy_lifecycle.rs  main.rs
tests/multi-signers/: main.rs  multi_signer_tests.rs
tests/multi_signer/: signer_management.rs
tests/payment-address/: initialize_atas_tests.rs  main.rs  payment_address_tests.rs
tests/payment_address/: main.rs  payment_address_legacy_tests.rs  payment_address_multi_payment_tests.rs  payment_address_v0_lut_tests.rs  payment_address_v0_tests.rs
tests/rpc/: basic_endpoints.rs  bundles.rs  compute_budget.rs  durable_transactions.rs  fee_estimation.rs  main.rs  swap_for_gas.rs  transaction_signing.rs  transfers.rs  webhook_events.rs
tests/src/: lib.rs  setup_test_env.rs
tests/src/common/: assertions.rs  auth_helpers.rs  client.rs  constants.rs  extension_helpers.rs  helpers.rs  lookup_tables.rs  mod.rs  setup.rs  surfnet.rs  transaction.rs
tests/src/test_runner/: accounts.rs  commands.rs  config.rs  kora.rs  mod.rs  output.rs  test_cases.toml  validator.rs  webhook_events.rs
tests/testing-utils/: Cargo.toml
tests/testing-utils/fixtures/: auth-test.toml  kora-test.toml
tests/testing-utils/src/: auth_helpers.rs  helpers.rs  lib.rs  setup_test_env.rs
tests/tokens/: main.rs  token_2022_extensions_test.rs  token_2022_test.rs
tests/usage_limit/: bundle_limits.rs  instruction_limits.rs  main.rs  multiple_rules.rs  transaction_limits.rs
tk/: Cargo.toml
tk/src/: lib.rs
(+371 files in other folders)
