[workspace]
members = [
    "crates/lib",
    "crates/rpc",
    "crates/cli",
    "scripts",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/pkxro/kora"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.95"
thiserror = "1.0"
progenitor = "0.8.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
config = "0.13"
dotenv = "0.15"
jsonrpsee = { version = "0.16.2", features = ["server", "macros", "http-client", "client"] }
solana-sdk = "2.1.9"
solana-program = "2.1.9"
solana-client = "2.1.9"
bs58 = "0.5.1"
bincode = "1.3.3"
borsh = "1.5.3"
async-std = "1.13.0"
jsonrpsee-core = { version = "0.16.2", features = ["server"] }
env_logger = "0.11.5"
async-trait = "0.1.83"
base64 = "0.22.1"
log = "0.4.22"
bytes = "1.9.0"
reqwest = { version = "0.12.9", features = ["json", "blocking", "native-tls"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.3.5", features = ["full", "cors"] }
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1.41.1", features = ["full"] }
prettyplease = "0.2.25"
syn = "2.0.89"
parking_lot = "0.12"
once_cell = "1.20.2"
futures-util = "0.3.31"
hyper = "1.5.1"
http = "0.2"
jup-ag = "0.8.0"
toml = "0.8.19"
spl-token = "7.0.0"
spl-associated-token-account = "6.0.0"
jupiter-swap-api-client = { git = "https://github.com/pkxro/jupiter-swap-api-client.git", package = "jupiter-swap-api-client"}
jupiter = "3.1.4"
chrono = "0.4.39"
hex = "0.4.3"
p256 = "0.13.2"
redis = { version = "0.24.0", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.14.0"
vaultrs = "0.7.3"
tk-rs = { git = "https://github.com/pkxro/tk-rs.git" }
pyth-sdk-solana = "0.10.3"