[package]
name = "scripts"
version.workspace = true
edition.workspace = true

[[bin]]
name = "presigned"
path = "presigned.rs"

[[bin]]
name = "token"
path = "token.rs"

[dependencies]
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-program = { workspace = true }
solana-system-interface = { workspace = true }
solana-message = { workspace = true }
bincode = "1.3.3"
bs58 = "0.5.1"
kora-lib = { path = "../crates/lib" }
spl-token = { workspace = true }
