[package]
name = "tests"
version = { workspace = true }
edition = { workspace = true }

[[test]]
name = "integration"
path = "integration_tests.rs"

[[test]]
name = "api_integration"
path = "api_integration_tests.rs"

[[test]]
name = "token_integration"
path = "token_integration_tests.rs"

[[test]]
name = "oracle"
path = "integrations/oracle/mod.rs"

[[test]]
name = "integrations"
path = "integrations/mod.rs"

[[test]]
name = "jupiter"
path = "integrations/oracle/jupiter_tests.rs"

[[bin]]
name = "setup-test-env"
path = "setup-test-env.rs"

[dependencies]
kora-lib = { path = "../crates/lib" }
solana-sdk = { workspace = true }
solana-commitment-config = { workspace = true }
solana-message = { workspace = true }
solana-system-interface = { workspace = true }
solana-client = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
spl-associated-token-account = { workspace = true }
solana-compute-budget-interface = "2.2.2"
bincode = { workspace = true }
bs58 = { workspace = true }
dotenv = { workspace = true }
jsonrpsee = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
testing-utils = { path = "testing-utils" }
