[package]
name = "tests"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "setup_test_env"
path = "src/bin/setup_test_env.rs"


[[test]]
name = "integration"
path = "integration/main.rs"

[[test]]
name = "auth"
path = "auth/main.rs"

[[test]]
name = "payment-address"
path = "payment-address/main.rs"

[dependencies]
kora-lib = { path = "../crates/lib" }
solana-sdk = { workspace = true }
solana-commitment-config = { workspace = true }
solana-message = { workspace = true }
solana-system-interface = { workspace = true }
solana-client = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
spl-associated-token-account = { workspace = true }
solana-compute-budget-interface = "2.2.2"
bincode = { workspace = true }
bs58 = { workspace = true }
dotenv = { workspace = true }
jsonrpsee = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
once_cell = "1.21.3"
clap = { workspace = true }
toml = { workspace = true }
solana-address-lookup-table-interface = { workspace = true }
colored = "3.0"
serde = { workspace = true }
