[package]
name = "tests"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "test_runner"
path = "src/bin/test_runner.rs"


[[test]]
name = "rpc"
path = "rpc/main.rs"

[[test]]
name = "tokens"
path = "tokens/main.rs"

[[test]]
name = "auth"
path = "auth/main.rs"

[[test]]
name = "multi_signer"
path = "multi_signer/main.rs"

[[test]]
name = "external"
path = "external/main.rs"

[[test]]
name = "payment_address"
path = "payment_address/main.rs"

[dependencies]
kora-lib = { path = "../crates/lib" }
solana-sdk = { workspace = true }
solana-commitment-config = { workspace = true }
solana-message = { workspace = true }
solana-system-interface = { workspace = true }
solana-client = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-transfer-hook-interface = { version = "0.10.0" }
solana-compute-budget-interface = "2.2.2"
bincode = { workspace = true }
bs58 = { workspace = true }
dotenv = { workspace = true }
jsonrpsee = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
once_cell = "1.21.3"
clap = { workspace = true, features = ["derive"] }
toml = { workspace = true }
solana-address-lookup-table-interface = { workspace = true }
colored = "3.0"
serde = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
