[package]
name = "tk"
version = "0.10"
edition = "2021"
license = "SPECIFY A LICENSE BEFORE PUBLISHING"

[dependencies]
bytes = "1.0"
futures-core = "0.3"
progenitor-client = "0.8.0"
reqwest = { version = "0.12", default-features=false, features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

