[package]
name = "kora-deploy"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Deploy Solana programs through a Kora paymaster (no SOL required)."
readme = "README.md"
keywords = ["solana", "kora", "paymaster", "deploy"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "kora-deploy"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true, features = ["derive"] }
log = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
solana-client = { workspace = true }
solana-commitment-config = { workspace = true }
solana-loader-v3-interface = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
