[package]
name = "kora-lib"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for Kora gasless relayer"

[lib]
path = "src/mod.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
solana-sdk = { workspace = true }
solana-program = { workspace = true }
solana-client = { workspace = true }
bs58 = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
jup-ag = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
jupiter-swap-api-client = { workspace = true }
jupiter = { workspace = true }
vaultrs = { workspace = true }
tk-rs = { workspace = true } 
deadpool-redis = { workspace = true }
jsonrpsee = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
redis = { workspace = true }
toml = { workspace = true }
log = { workspace = true }
clap = { workspace = true }
utoipa = { workspace = true }
dirs = "6.0.0"
mockall = "0.13.1"

[dev-dependencies]
tempfile = "3.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
mockito = "1.2.0"