[package]
name = "kora-lib"
version = "1.0.3"
edition = "2021"
license = "MIT"
description = "Core library for Kora gasless relayer"

[lints]
workspace = true

[lib]
path = "src/mod.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
solana-sdk = { workspace = true }
solana-commitment-config = { workspace = true }
solana-message = { workspace = true }
solana-system-interface = { workspace = true }
solana-program = { workspace = true }
solana-address-lookup-table-interface = { workspace = true }
solana-client = { workspace = true }
bs58 = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
jup-ag = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
spl-associated-token-account = { workspace = true }
jupiter = { workspace = true }
vaultrs = { workspace = true }
kora-turnkey = { workspace = true }
kora-privy = { workspace = true }
deadpool-redis = { workspace = true }
jsonrpsee = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
redis = { workspace = true }
toml = { workspace = true }
log = { workspace = true }
clap = { workspace = true }
utoipa = { workspace = true }
dirs = "6.0.0"
mockall = "0.13.1"
spl-pod = "0.5.0"
[dev-dependencies]
tempfile = "3.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
mockito = "1.2.0"
