[package]
name = "kora-lib"
version = "1.0.3"
edition = "2021"
license = "MIT"
description = "Core library for Kora gasless relayer"

[lints]
workspace = true

[lib]
path = "src/mod.rs"

[[bin]]
name = "update-config"
path = "src/metrics/bin/update-config.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
solana-sdk = { workspace = true }
solana-commitment-config = { workspace = true }
solana-message = { workspace = true }
solana-system-interface = { workspace = true }
solana-program = { workspace = true }
solana-transaction-status-client-types = { workspace = true }
solana-address-lookup-table-interface = { workspace = true }
solana-client = { workspace = true }
bs58 = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
jup-ag = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
spl-associated-token-account = { workspace = true }
vaultrs = { workspace = true }
deadpool-redis = { workspace = true }
jsonrpsee = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
redis = { workspace = true }
toml = { workspace = true }
log = { workspace = true }
clap = { workspace = true }
rand = "0.9.2"
utoipa = { workspace = true }
dirs = "6.0.0"
mockall = "0.13.1"
spl-pod = "0.5.0"
p256 = { version = "0.13", features = ["ecdsa"] }
chrono = { workspace = true }
hex = { workspace = true }
# RPC server dependencies
tracing-subscriber = { workspace = true }
jsonrpsee-core = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
hyper = { workspace = true }
http = { workspace = true }
env_logger = { workspace = true }
config = { workspace = true }
dotenv = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
http-body = "1.0.1"
http-body-util = "0.1.3"
prometheus = { workspace = true }
regex = "1.11.1"

[features]
default = []
docs = []

[dev-dependencies]
tempfile = "3.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
mockito = "1.2.0"
serial_test = "3.2.0"
redis-test = "0.12.0"
