[package]
name = "kora-metrics"
version = "0.0.1"
edition = "2021"
description = "A Rust library for Kora metrics"
license = "MIT"

[[bin]]
name = "update-config"
path = "src/bin/update-config.rs"

[dependencies]
prometheus = { workspace = true }
tower = { workspace = true }
http = { workspace = true }
pin-project = "1.1"
futures-util = { workspace = true }
jsonrpsee = { workspace = true }
serde_json = { workspace = true }
kora-lib = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
regex = "1.10"

[lib]
name = "kora_metrics"
path = "src/mod.rs"
