[package]
name = "privy-rs"
version = "1.0.0"
edition = "2021"
description = "A Rust library for Privy signing"
license = "MIT"

[dependencies]
solana-sdk = "2.1"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
async-trait = "0.1"
anyhow = "1.0"

[dev-dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
dotenv = "0.15"

[lib]
name = "privy_rs"
path = "src/mod.rs"