[package]
name = "kora-rpc"
version = "1.0.2"
edition = "2021"
license = "MIT"
description = "RPC server for Kora gasless relayer"

[[bin]]
name = "kora-rpc"
path = "src/main.rs"

[[bin]]
name = "kora-openapi"
path = "src/openapi/main.rs"

[dependencies]
kora-lib = { path = "../lib", version = "1.0.2" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
jsonrpsee = { workspace = true }
jsonrpsee-core = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
hyper = { workspace = true }
http = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
dotenv = { workspace = true }
redis = { workspace = true }
deadpool-redis = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-program = { workspace = true }
kora-turnkey = { workspace = true, version = "1.0.2" }
kora-privy = { workspace = true, version = "1.0.2" }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
utoipa.workspace = true
dirs = "6.0.0"

[dev-dependencies]
tokio = { workspace = true }
jsonrpsee = { workspace = true }
serde_json = { workspace = true } 
