[package]
name = "devnet-deploy-paymaster-smoke"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "devnet_smoke"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true, features = ["derive"] }
reqwest = { workspace = true }
serde_json = { workspace = true }
solana-client = { workspace = true }
solana-commitment-config = { workspace = true }
solana-loader-v3-interface = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
