[package]
name = "devnet-deploy-paymaster"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "devnet_deployer_smoke"
path = "src/bin/devnet_deployer_smoke.rs"

[[bin]]
name = "devnet_deploy_reaper"
path = "src/bin/reaper.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dotenv = { workspace = true }
futures = { workspace = true }
kora-deploy = { workspace = true }
kora-lib = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-account-decoder-client-types = "3.0"
solana-client = { workspace = true }
solana-commitment-config = { workspace = true }
solana-compute-budget-interface = { workspace = true }
solana-keychain = { version = "1.2.0", default-features = false, features = ["memory"] }
solana-loader-v3-interface = { workspace = true }
solana-loader-v4-interface = { workspace = true }
solana-sdk = { workspace = true }
solana-system-interface = { workspace = true }
solana-transaction-status-client-types = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
