[package]
name = "testing-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-message = { workspace = true }
solana-address-lookup-table-interface = { workspace = true }
solana-system-interface = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
jsonrpsee = { workspace = true }
kora-lib = { path = "../../crates/lib" }
serde_json = { workspace = true }
once_cell = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
reqwest = { workspace = true }
hex = { workspace = true }
